--- a/src/styles/Room.css
+++ b/src/styles/Room.css
@@ -241,3 +241,9 @@
   .trash-button{
     margin-top: 10px;
   }
+
+  .user-tag{
+    color: #8e8e8e;
+    font-size: 12px;
+    margin-left: 5px;
+  }
