--- a/src/styles/Room.css
+++ b/src/styles/Room.css
@@ -247,3 +247,50 @@
     font-size: 12px;
     margin-left: 5px;
   }
+
+  /* friend req section */
+  .friend-requests{
+    position: absolute;
+    /* border: 2px solid white; */
+    width: 280px;
+    height: 80px;
+    border-radius: 10px;
+    margin-left: 0px;
+    bottom: 60px;
+    left: 0;
+    margin: 15px;
+    margin-top: 0;
+  }
+
+  .frnd-req-wrapper{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px;
+    padding-left: 0;
+    padding-right: 0;
+    align-items: center;
+  }
+  /* .friend-req-header{
+    font-size: 20px;
+  } */
+
+  .friend-req-info{
+    /* display: flex; */
+    /* margin-left: 30px; */
+    /* margin-top: 10px; */
+    max-width: 250px;
+    align-items: center;
+  }
+
+  .accept-decline{
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .user-info{
+    display: flex;
+  }
+  
+  .pointerOnHover:hover{
+    cursor: pointer;
+  }
