--- a/src/styles/Room.css
+++ b/src/styles/Room.css
@@ -168,7 +168,7 @@
   }
 
   .sender{
-    max-width: 85%;
+    max-width: 80%;
     display: flex;
     margin:10px
   }
@@ -212,17 +212,51 @@
   }
 
   /* messages css */
+  .chats{
+    display: flex;
+    max-width: 72%;
+    flex-direction: column;
+  }
   .text-message {
     display: flex;
-    align-items: flex-start;
+    width: auto;
+    margin-right: 0;
     margin-bottom: 10px;
-    max-width: 74%;
+  }
+
+  .me-message{
+    display: flex;
+    /* align-items: flex-start; */
+    
+    /* margin-left: 100 */
+    justify-content: flex-end;
+    /* margin-right: 0; */
+    float: right;
+    margin-bottom: 10px;
+  }
+
+  .other-message{
+    display: flex;
+    /* align-items: flex-start; */
+    
+    float: left;
+    margin-bottom: 10px;
   }
   
-  .message--body {
+  .message--body-other {
     max-width: 70%; /* Set maximum width for the message body */
     padding: 10px;
     background-color: #f0f0f0;
+    border-radius: 5px;
+    font-size: 14px;
+    line-height: 1.5;
+    color: rgba(27, 27, 39, 1);
+    position: relative;
+  }
+  .message--body-me {
+    max-width: 70%; /* Set maximum width for the message body */
+    padding: 10px;
+    background-color: #fff0b2;
     border-radius: 5px;
     font-size: 14px;
     line-height: 1.5;
